tests/org.eclipse.php.core.tests/workspace/errors/unfinishedClassDecl2.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A {
5
}
?>
--EXPECT--
[line=4, start=18, end=19] syntax error, unexpected '}'